# open-ProductionSTM32-Flash

./: .gitignore  LICENSE  README.md  install.bat  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/interfaces/: jlink_swd.cfg  stlink_swd.cfg
docs/: ADDING_FAMILIES.md  ARCHITECTURE.md  RDP_LEVELS.md
src/: main.py
src/core/: device_detector.py  family_config.py  flash_worker.py  openocd_runner.py
src/ui/: log_panel.py  main_window.py  settings_dialog.py  settings_tab.py
tests/: test_family_config.py  test_openocd_runner.py
