[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stm32-production-flasher"
version = "0.1.0"
description = "PyQt6 GUI for flashing STM32 firmware and activating RDP in production using OpenOCD"
authors = [{name = "Yuri Alves Bordin"}]
requires-python = ">=3.10"
dependencies = ["PyQt6>=6.4.0"]

[project.urls]
Repository = "https://github.com/YuriAlvesBordin/stm32-production-flasher"

[tool.pytest.ini_options]
testpaths = ["tests"]
